--- a/index.html
+++ b/index.html
@@ -1,22 +1,101 @@
-<<!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>潘氏黃英｜個人介紹</title>
+
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Microsoft JhengHei', sans-serif;
+      background: #f1f1f7;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      min-height: 100vh;
+      padding: 30px 0;
+    }
+
+    .card {
+      background: white;
+      width: 380px;
+      padding: 20px;
+      border-radius: 20px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+      text-align: center;
+    }
+
+    .avatar {
+      width: 160px;
+      height: 160px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-bottom: 15px;
+    }
+
+    h2 {
+      margin: 10px 0;
+      font-size: 24px;
+      color: #333;
+    }
+
+    p {
+      margin: 6px 0;
+      font-size: 15px;
+      color: #555;
+    }
+
+    .title {
+      margin-top: 25px;
+      font-size: 17px;
+      font-weight: bold;
+      color: #444;
+    }
+
+    /* 照片集 */
+    .gallery {
+      margin-top: 15px;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 10px;
+    }
+
+    .gallery img {
+      width: 100%;
+      height: 120px;
+      object-fit: cover;
+      border-radius: 10px;
+    }
+  </style>
 </head>
-<body style="margin:0; padding:0; font-family: 'Microsoft JhengHei', sans-serif; background:#f1f1f7; display:flex; justify-content:center; align-items:center; min-height:100vh;">
-  <div style="background:white; width:360px; padding:20px; border-radius:20px; box-shadow:0 8px 20px rgba(0,0,0,0.1); text-align:center;">
-    <img src="images/huynhanh.jpeg" alt="潘氏黃英" style="width:160px; height:160px; border-radius:50%; object-fit:cover; margin-bottom:15px;" />
-    <h2 style="margin:10px 0; font-size:24px; color:#333;">潘氏黃英 / Phan Thi Huynh Anh</h2>
-    <p style="margin:6px 0; font-size:15px; color:#555;">國籍：越南</p>
-    <p style="margin:6px 0; font-size:15px; color:#555;">年齡：21</p>
+<body>
 
-    <p style="margin-top:20px; font-size:16px; font-weight:bold; color:#666;">興趣</p>
-    <p style="margin:6px 0; font-size:15px; color:#555;">聽音樂、睡覺、吃東西</p>
+  <div class="card">
+    <img src="images/huynhanh.jpeg" alt="潘氏黃英" class="avatar">
 
-    <p style="margin-top:20px; font-size:16px; font-weight:bold; color:#666;">想體驗</p>
-    <p style="margin:6px 0; font-size:15px; color:#555;">吃喝玩樂</p>
+    <h2>潘氏黃英 / Phan Thi Huynh Anh</h2>
+
+    <p>國籍：越南</p>
+    <p>年齡：21</p>
+
+    <p class="title">興趣</p>
+    <p>聽音樂、睡覺、吃東西</p>
+
+    <p class="title">想體驗</p>
+    <p>吃喝玩樂</p>
+
+    <!-- 新增個人照片區 -->
+    <p class="title">個人照片</p>
+
+    <div class="gallery">
+      <img src="images/myphoto1.jpg" alt="個人照片1">
+      <img src="images/myphoto2.jpg" alt="個人照片2">
+      <img src="images/myphoto3.jpg" alt="個人照片3">
+      <img src="images/myphoto4.jpg" alt="個人照片4">
+    </div>
+
   </div>
+
 </body>
 </html>
