--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
     <p class="title">個人照片</p>
 
     <div class="gallery">
-      <img src="images/myphoto1.jpg" alt="個人照片1">
-      <img src="images/myphoto2.jpg" alt="個人照片2">
-      <img src="images/myphoto3.jpg" alt="個人照片3">
-      <img src="images/myphoto4.jpg" alt="個人照片4">
+      <img src="images/myphoto1.jpeg" alt="個人照片1">
+      <img src="images/myphoto2.jpeg" alt="個人照片2">
+      <img src="images/myphoto3.jpeg" alt="個人照片3">
+      <img src="images/myphoto4.jpeg" alt="個人照片4">
     </div>
 
   </div>
