--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8" />
@@ -47,10 +48,17 @@
     }
 
     .title {
-      margin-top: 25px;
+      margin-top: 22px;
       font-size: 17px;
       font-weight: bold;
       color: #444;
+    }
+
+    ul {
+      padding-left: 20px;
+      text-align: left;
+      font-size: 14px;
+      color: #555;
     }
 
     /* 照片集 */
@@ -74,7 +82,8 @@
   <div class="card">
     <img src="images/huynhanh.jpeg" alt="潘氏黃英" class="avatar">
 
-    <h2>潘氏黃英 / Phan Thi Huynh Anh</h2>
+    <h2>潘氏黃英</h2>
+    <p>Phan Thi Huynh Anh</p>
 
     <p>國籍：越南</p>
     <p>年齡：21</p>
@@ -83,11 +92,31 @@
     <p>聽音樂、睡覺、吃東西</p>
 
     <p class="title">想體驗</p>
-    <p>吃喝玩樂</p>
+    <p>吃喝玩樂、體驗不同文化與生活方式</p>
 
-    <!-- 新增個人照片區 -->
+    <p class="title">優點</p>
+    <ul>
+      <li>學習能力強，願意嘗試新事物</li>
+      <li>做事認真、有責任感</li>
+      <li>個性隨和，能與同事良好相處</li>
+    </ul>
+
+    <p class="title">缺點</p>
+    <ul>
+      <li>有時較害羞，不太主動表達想法</li>
+      <li>偶爾會因追求完美而花較多時間</li>
+    </ul>
+
+    <p class="title">工作經驗</p>
+    <p><strong>餐飲服務人員（打工）</strong></p>
+    <ul>
+      <li>負責點餐、送餐與顧客服務</li>
+      <li>維持環境整潔與衛生</li>
+      <li>與同事合作，確保工作流程順暢</li>
+      <li>培養良好的服務態度與溝通能力</li>
+    </ul>
+
     <p class="title">個人照片</p>
-
     <div class="gallery">
       <img src="images/myphoto1.jpeg" alt="個人照片1">
       <img src="images/myphoto2.jpeg" alt="個人照片2">
