--- a/index.html
+++ b/index.html
@@ -61,6 +61,15 @@
       color: #555;
     }
 
+    a {
+      color: #555;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
     /* 照片集 */
     .gallery {
       margin-top: 15px;
@@ -115,6 +124,10 @@
       <li>與同事合作，確保工作流程順暢</li>
       <li>培養良好的服務態度與溝通能力</li>
     </ul>
+
+    <p class="title">聯絡方式</p>
+    <p>Instagram：<a href="https://www.instagram.com/22path" target="_blank">@22path</a></p>
+    <p>Email：tpah1103@gnail.com</p>
 
     <p class="title">個人照片</p>
     <div class="gallery">
