--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
     <p class="title">聯絡方式</p>
     <p>Instagram：<a href="https://www.instagram.com/22path" target="_blank">@22path</a></p>
-    <p>Email：tpah1103@gnail.com</p>
+    <p>Email：tpah1103@gmail.com</p>
 
     <p class="title">個人照片</p>
     <div class="gallery">
